Add "About" page

--- a/AspMvcECommerce2.WebUI/AspMvcECommerce2.WebUI.csproj
+++ b/AspMvcECommerce2.WebUI/AspMvcECommerce2.WebUI.csproj
@@ -121,6 +121,7 @@
     <Content Include="wwwroot\js\materialize.min.js" />
     <Content Include="wwwroot\pages\admin.htm" />
     <Content Include="wwwroot\pages\adminunit.htm" />
+    <Content Include="wwwroot\pages\about.htm" />
     <Content Include="wwwroot\pages\home.htm" />
     <Content Include="wwwroot\pages\signin.htm" />
     <Content Include="wwwroot\pages\signup.htm" />
