--- a/AspMvcECommerce2.WebUI/AspMvcECommerce2.WebUI.csproj
+++ b/AspMvcECommerce2.WebUI/AspMvcECommerce2.WebUI.csproj
@@ -50,6 +50,9 @@
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Ninject, Version=3.3.4.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.3.4\lib\net45\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -134,6 +137,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="App_Start\NinjectControllerFactory.cs" />
     <Compile Include="Models\ApiResponse.cs" />
     <Compile Include="Models\TestUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -152,6 +156,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Infrastrucure\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AspMvcECommerce2.Domain\AspMvcECommerce2.Domain.csproj">
