--- a/AspMvcECommerce2.WebUI/AspMvcECommerce2.WebUI.csproj
+++ b/AspMvcECommerce2.WebUI/AspMvcECommerce2.WebUI.csproj
@@ -152,6 +152,7 @@
     </Compile>
     <Compile Include="Models\ApiResponse.cs" />
     <Compile Include="Models\ArticleForm.cs" />
+    <Compile Include="Models\FilterForm.cs" />
     <Compile Include="Models\NavigationData.cs" />
     <Compile Include="Models\SigninRequestForm.cs" />
     <Compile Include="Models\SignupRequestForm.cs" />
