--- a/AspMvcECommerce2.WebUI/AspMvcECommerce2.WebUI.csproj
+++ b/AspMvcECommerce2.WebUI/AspMvcECommerce2.WebUI.csproj
@@ -144,6 +144,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ArticleController.cs" />
     <Compile Include="Controllers\AuthController.cs" />
+    <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\DefaultController.cs" />
     <Compile Include="Controllers\UserController.cs" />
@@ -152,6 +153,10 @@
     </Compile>
     <Compile Include="Models\ApiResponse.cs" />
     <Compile Include="Models\ArticleForm.cs" />
+    <Compile Include="Models\Cart.cs" />
+    <Compile Include="Models\CartAction.cs" />
+    <Compile Include="Models\CartItemDetails.cs" />
+    <Compile Include="Models\CartItem.cs" />
     <Compile Include="Models\FilterForm.cs" />
     <Compile Include="Models\NavigationData.cs" />
     <Compile Include="Models\SigninRequestForm.cs" />
